# Cross-Platform_Programing_Lab1

./: run.py
assignment1/task0/: pyproject.toml
assignment1/task0/xvm/: program.txt  run.py  vm.py
assignment1/task0/xvm.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
materials/: cli_EX.py  vm_EX.py
task0/: README_TEST.md  pyproject.toml
task0/tests/: test_part1.py  test_part2.py  test_part5.py  test_part6.py
task0/xvm/: README.md  README_TEST.md  debug_program.txt  debug_program1.txt  debug_program2.txt  debug_program3.txt  our_program.py  pyproject.toml  run.py  test_debugger.py  unittest_program.xvm  vm.py
task0/xvm.egg-info/: PKG-INFO  SOURCES.txt
task0/xvm/xvm.egg-info/: PKG-INFO  SOURCES.txt
task1/: part1_if_loop_counter.py  part2_recusion_detector.py  part3_constexpr.py
