[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "xvm"
version = "0.0.0"
authors = [
  {name = "Hatina Valeriia", email = "gatina.valeria@lll.kpi.ua"},
  {name = "Anna Akimova", email = "akimova.anna@lll.kpi.ua"},
]

[project.scripts]
xvm = "xvm.run:xvm_debug"


[tool.setuptools.packages.find]
include = ["xvm*"]
exclude = ["tests*", "useful_examples*"]